# conformalizer

./: .bumpversion.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  foo.yaml  pyproject.toml  pyrightconfig.json  pytest.toml  script.py  try-repo.sh
.github/workflows/: pull-request.yaml  push.yaml
src/conformalize/: cli.py  constants.py  lib.py  logging.py  settings.py  types.py
src/nitpick/: constants.py  lib.py
src/tests/: test_main.py
